<resources>
    <string name="app_name">NgPad</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Tutorial</string>
    <string name="tab_text_3">Quiz</string>
    <string name="tab_text_4">Interview</string>
    <string name="tab_text_5">News</string>
    <string name="tab_text_6">Learn More</string>
    <string name="tab_text_7">Help Center</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <string name="menu_like">Like Us (Get Latest Updates)</string>
    <string name="menu_share">Share App</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_getpro">Get Pro - Unlock Everything</string>
    
    <!-- Performance analysis strings for quiz results -->
    <string name="performance_poor">Your %1$d%% score in %2$s shows you’re just starting out. Don’t worry! Focus on revising key concepts and practice regularly to build your skills.</string>
    <string name="performance_average">With a %1$d%% score in %2$s, you’re making progress! Keep studying and tackle more practice questions to boost your understanding.</string>
    <string name="performance_good">Great job scoring %1$d%% in %2$s! You’re doing well, but there’s room to grow. Put in some extra effort on challenging topics to aim higher.</string>
    <string name="performance_excellent">Wow, %1$d%% in %2$s is outstanding! You’ve mastered this topic. Keep practicing to maintain your excellence and explore advanced concepts!</string>
 
    
</resources>